--- a/A02/A02/makefile
+++ b/A02/A02/makefile
@@ -9,7 +9,7 @@ clean:
 
 
 word_ladder:		word_ladder.c
-	cc -Wall -Wextra -O2 word_ladder.c -o word_ladder -lm
+	cc -Wall -Wextra -O2 -g word_ladder.c -o word_ladder -lm
 
 solution_word_ladder:	solution_word_ladder.c
 	cc -Wall -Wextra -O2 solution_word_ladder.c -o solution_word_ladder -lm
